--- a/index.html
+++ b/index.html
@@ -578,6 +578,16 @@ function moveHand() {
     canvas.style.cursor = "default";
   }
 };
+
+//Действие при нажатии на клавишы
+document.addEventListener('keyup', function (e) {
+  if (e.which == 107 || e.which == 187) {
+    zoomPlus();
+  }
+  if (e.which == 109 || e.which == 189) {
+    zoomMinus();
+  }
+});
 //Переменные для зумирования
 let translatePos = {x: 0, y: 0};
 let scale = 1.0;
@@ -589,12 +599,13 @@ function zoomPlus() {
   x: Math.floor((canvas.width-img.width*scale)/2) ,
   y: Math.floor((canvas.height-img.height*scale)/2)};
   console.log(translatePos, scale);
-  ctx.save();/*сохраняет все состояние холста, помещая текущее состояние в стек*/
+  ctx.reset();
+  //ctx.save();/*сохраняет все состояние холста, помещая текущее состояние в стек*/
   ctx.translate(translatePos.x, translatePos.y);/*перемещая холст и его исходные x-единицы по горизонтали и y-единицы по вертикали на сетке*/
   ctx.scale(scale, scale);/*преобразование масштабирования к единицам холста по горизонтали и/или вертикали*/
-  ctx.beginPath(); /*Вызовите этот метод, если хотите создать новый путь*/
+  //ctx.beginPath(); /*Вызовите этот метод, если хотите создать новый путь*/
   ctx.drawImage(img, 0, 0);/*наносим на холст изображение*/
-  ctx.restore();/*восстанавливает последнее сохраненное состояние холста, извлекая верхнюю запись из стека состояний рисования. Если нет сохраненного состояния, этот метод ничего не делает.*/
+  //ctx.restore();/*восстанавливает последнее сохраненное состояние холста, извлекая верхнюю запись из стека состояний рисования. Если нет сохраненного состояния, этот метод ничего не делает.*/
 };
 //Удаление
 function zoomMinus() {
@@ -603,13 +614,15 @@ function zoomMinus() {
   x: Math.floor((canvas.width-img.width*scale)/2) ,
   y: Math.floor((canvas.height-img.height*scale)/2)};
   console.log(translatePos, scale);
-  ctx.save();/*сохраняет все состояние холста, помещая текущее состояние в стек*/
+  ctx.reset();
+  //ctx.save();/*сохраняет все состояние холста, помещая текущее состояние в стек*/
   ctx.translate(translatePos.x, translatePos.y);/*перемещая холст и его исходные x-единицы по горизонтали и y-единицы по вертикали на сетке*/
   ctx.scale(scale, scale);/*преобразование масштабирования к единицам холста по горизонтали и/или вертикали*/
-  ctx.beginPath(); /*Вызовите этот метод, если хотите создать новый путь*/
+  //ctx.beginPath(); /*Вызовите этот метод, если хотите создать новый путь*/
   ctx.drawImage(img, 0, 0);/*наносим на холст изображение*/
-  ctx.restore();/*восстанавливает последнее сохраненное состояние холста, извлекая верхнюю запись из стека состояний рисования. Если нет сохраненного состояния, этот метод ничего не делает.*/
+  //ctx.restore();/*восстанавливает последнее сохраненное состояние холста, извлекая верхнюю запись из стека состояний рисования. Если нет сохраненного состояния, этот метод ничего не делает.*/
 };
+
 //Просмотр результата
 function controlView() {
   valueCompareRange = compareRange.value;
@@ -1389,5 +1402,4 @@ function loaderAction() {
   loaderAction.style.opacity ="1";
   }
 setTimeout(loaderAction,1000);*/  
-
 </script>
